--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       background: url(https://snazzy-maps-cdn.azureedge.net/assets/74-becomeadinosaur.png?v=20170626082939);
       background-size: center;
       
-      color: black;
+      color: yellow;
     }
     a {
       color: white;
