--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       background: url(https://snazzy-maps-cdn.azureedge.net/assets/74-becomeadinosaur.png?v=20170626082939);
       background-size: center;
       
-      color: yellow;
+      color: green;
     }
     a {
       color: white;
@@ -70,10 +70,6 @@
     <h2>Forage food truck keytar master cleanse</h2>
     <p>ethical thundercats sustainable locavore quinoa Neutra. Aesthetic tacky sweater single-origin coffee, bicycle rights organic lo-fi street art american apparel ennui four loko ethnic Brooklyn small batch. Forage YOLO polaroid</p>
   </article>
-  <script>
-    $("button").on("click", function() {
-      alert("Clicked!");
-    });
-  </script>
+ 
 </body>
  
