--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
     <img src="/assets/jeff.png">
     <h1>Awareness</h1>
     <ul>
-      <li><a href="#">About Me</a></li>
-      <li><a href="#">Best Poems</a></li>
-      <li><a href="#">Worst Poems</a></li>
+      <li><a href="#">Product Information</a></li>
+      <li><a href="#">Support Us</a></li>
+      <li><a href="#">About Us</a></li>
     </ul>
   </header>
   <article>
