--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     header {
       text-align: center;
       background: url(https://snazzy-maps-cdn.azureedge.net/assets/74-becomeadinosaur.png?v=20170626082939);
-      background-size: center;
+      background-size: 800 500;
       
-      color: green;
+      color: black;
     }
     a {
       color: white;
@@ -58,18 +58,24 @@
     </ul>
   </header>
   <article>
-    <h2>VHS umami pop-up trust fund</h2>
-    <p>Marfa church-key kitsch bicycle rights, 8-bit mixtape cardigan gentrify Echo Park. Street art swag brunch, next level roof party Schlitz hella organic keffiyeh selfies. You probably haven't heard of them polaroid hashtag +1, meggings biodiesel Portland High Life cray tumblr retro.</p
-    
+    <h2>Main Idea</h2>
+    <p>Marfa church-key kitsch bicycle rights, 8-bit mixtape cardigan gentrify Echo Park. Street art swag brunch, next level roof party Schlitz hella organic keffiyeh selfies. You probably haven't heard of them polaroid hashtag +1, meggings biodiesel Portland High Life cray tumblr retro.</p>
+    <button>Like</button>
   </article>
   <article>
-    <h2>Sartorial synth Echo Park, roof party</h2>
+    <h2>Purpose</h2>
     <p>chambray you probably haven't heard of them pour-over viral selvage umami skateboard VHS post-ironic selfies. Wes Anderson gentrify fanny pack twee, bicycle rights bitters blog keffiyeh plaid flannel. Tonx irony cliche sustainable mlkshk bitters. Four loko leggings chambray Vice.</p>
+    <button>Like</button>
   </article>
   <article>
-    <h2>Forage food truck keytar master cleanse</h2>
+    <h2>Result</h2>
     <p>ethical thundercats sustainable locavore quinoa Neutra. Aesthetic tacky sweater single-origin coffee, bicycle rights organic lo-fi street art american apparel ennui four loko ethnic Brooklyn small batch. Forage YOLO polaroid</p>
+    <button>Like</button>
   </article>
- 
+  <script>
+    $("button").on("click", function() {
+      alert("Clicked!");
+    });
+  </script>
 </body>
  
