--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       background: url(https://snazzy-maps-cdn.azureedge.net/assets/74-becomeadinosaur.png?v=20170626082939);
       background-size: 800 500;
       
-      color: black;
+      color: green;
     }
     a {
       color: white;
@@ -60,22 +60,15 @@
   <article>
     <h2>Main Idea</h2>
     <p>Marfa church-key kitsch bicycle rights, 8-bit mixtape cardigan gentrify Echo Park. Street art swag brunch, next level roof party Schlitz hella organic keffiyeh selfies. You probably haven't heard of them polaroid hashtag +1, meggings biodiesel Portland High Life cray tumblr retro.</p>
-    <button>Like</button>
   </article>
   <article>
     <h2>Purpose</h2>
     <p>chambray you probably haven't heard of them pour-over viral selvage umami skateboard VHS post-ironic selfies. Wes Anderson gentrify fanny pack twee, bicycle rights bitters blog keffiyeh plaid flannel. Tonx irony cliche sustainable mlkshk bitters. Four loko leggings chambray Vice.</p>
-    <button>Like</button>
   </article>
   <article>
     <h2>Result</h2>
     <p>ethical thundercats sustainable locavore quinoa Neutra. Aesthetic tacky sweater single-origin coffee, bicycle rights organic lo-fi street art american apparel ennui four loko ethnic Brooklyn small batch. Forage YOLO polaroid</p>
-    <button>Like</button>
   </article>
-  <script>
-    $("button").on("click", function() {
-      alert("Clicked!");
-    });
-  </script>
+ 
 </body>
  
