--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <img src="/assets/jeff.png">
     <h1>Awareness</h1>
     <ul>
-      <li><a href="HMore2000.github.oi/product.html">Product Information</a></li>
+      <li><a href="product.html">Product Information</a></li>
       <li><a href="#">Support Us</a></li>
       <li><a href="#">About Us</a></li>
     </ul>
