--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
     <h1>Awareness</h1>
     <ul>
       <li><a href="product.html">Product Information</a></li>
-      <li><a href="#">Support Us</a></li>
-      <li><a href="#">About Us</a></li>
+      <li><a href="support.html">Support Us</a></li>
+      <li><a href="about.html">About Us</a></li>
     </ul>
   </header>
   <article>
