--- a/product.html
+++ b/product.html
@@ -57,16 +57,19 @@
       <li><a href="#">About Us</a></li>
     </ul>
   </header>
+  
   <article>
-    <h2>Main Idea</h2>
+    <h2>What is Awareness?</h2>
     <p>Marfa church-key kitsch bicycle rights, 8-bit mixtape cardigan gentrify Echo Park. Street art swag brunch, next level roof party Schlitz hella organic keffiyeh selfies. You probably haven't heard of them polaroid hashtag +1, meggings biodiesel Portland High Life cray tumblr retro.</p>
   </article>
+  
   <article>
-    <h2>Purpose</h2>
+    <h2>How does it work?</h2>
     <p>chambray you probably haven't heard of them pour-over viral selvage umami skateboard VHS post-ironic selfies. Wes Anderson gentrify fanny pack twee, bicycle rights bitters blog keffiyeh plaid flannel. Tonx irony cliche sustainable mlkshk bitters. Four loko leggings chambray Vice.</p>
   </article>
+  
   <article>
-    <h2>Result</h2>
+    <h2>Impacts of Awareness</h2>
     <p>ethical thundercats sustainable locavore quinoa Neutra. Aesthetic tacky sweater single-origin coffee, bicycle rights organic lo-fi street art american apparel ennui four loko ethnic Brooklyn small batch. Forage YOLO polaroid</p>
   </article>
  
