--- a/support.html
+++ b/support.html
@@ -59,7 +59,7 @@
   </header>
   <article>
     <h2>We need your help!</h2>
-    <p>Marfa church-key kitsch bicycle rights, 8-bit mixtape cardigan gentrify Echo Park. Street art swag brunch, next level roof party Schlitz hella organic keffiyeh selfies. You probably haven't heard of them polaroid hashtag +1, meggings biodiesel Portland High Life cray tumblr retro.</p>
+    <p>Donating: By donating, you agree to provide your personal money with the Awareness Foundation, the nonprofit organization that hosts Awareness and other Awareness projects. Awareness Foundation and its service providers are located in Canada. We do not sell or trade your money to anyone. Your whole donating would be used for developing this Awareness further.</p>
   </article>
   <article>
     <h2>Why should you help?</h2>
