--- a/product.html
+++ b/product.html
@@ -52,9 +52,9 @@
     <img src="/assets/jeff.png">
     <h1>Awareness</h1>
     <ul>
-      <li><a href="#">Product Information</a></li>
-      <li><a href="#">Support Us</a></li>
-      <li><a href="#">About Us</a></li>
+      <li><a href="product.html">Product Information</a></li>
+      <li><a href="support.html">Support Us</a></li>
+      <li><a href="about.html">About Us</a></li>
     </ul>
   </header>
   
