--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   </header>
   <article>
     <h2>Main Idea</h2>
-    <p>Marfa church-key kitsch bicycle rights, 8-bit mixtape cardigan gentrify Echo Park. Street art swag brunch, next level roof party Schlitz hella organic keffiyeh selfies. You probably haven't heard of them polaroid hashtag +1, meggings biodiesel Portland High Life cray tumblr retro.</p>
+    <p>In a world where danger is right around the corner, security has never been more important. Terrorists, climate calamities, and countless other disasters ravage our daily life. But despite all these different dangers, knowing that the people you know are dead isn’t the most tragic event that could occur. We think that the worst outcome is if your friend or relative is missing after a disastrous attack, or a huge catastrophe. </p>
   </article>
   <article>
     <h2>Purpose</h2>
