--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <body>
 
   <header>
-    <img src="HMore2000.github.io/Screen Shot 2017-07-12 at 2.17.50 PM.png">
+    <img src="https://raw.githubusercontent.com/HMore2000/HMore2000.github.io/master/Screen%20Shot%202017-07-12%20at%202.17.50%20PM.png">
     <h1>Awareness</h1>
     <ul>
       <li><a href="product.html">Product Information</a></li>
