--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     }
     img {
       margin: 40px 0px 0px 0px;
-      border: 7px solid white;
-      border-radius: 20px;
+      border: 7px solid black;
+      border-radius: 10px;
     }
     ul {
       padding: 10px;
