--- a/index.html
+++ b/index.html
@@ -49,8 +49,11 @@
 <body>
 
   <header>
-    <img src="https://raw.githubusercontent.com/HMore2000/HMore2000.github.io/master/Screen%20Shot%202017-07-12%20at%202.17.50%20PM.png">
-    <ul>
+    <a href="index.html>
+             <img src="https://raw.githubusercontent.com/HMore2000/HMore2000.github.io/master/Screen%20Shot%202017-07-12%20at%202.17.50%20PM.png">
+                                                                                                                                                 
+                                                                                                                                               </a>
+                                                                                                                                                 <ul>
       <li><a href="product.html">Product Information</a></li>
       <li><a href="support.html">Support Us</a></li>
       <li><a href="about.html">About Us</a></li>
