--- a/about.html
+++ b/about.html
@@ -49,7 +49,10 @@
 <body>
 
   <header>
-    <img src="https://raw.githubusercontent.com/HMore2000/HMore2000.github.io/master/Screen%20Shot%202017-07-12%20at%202.17.50%20PM.png">
+    <a href="index.html>
+             <img src="https://raw.githubusercontent.com/HMore2000/HMore2000.github.io/master/Screen%20Shot%202017-07-12%20at%202.17.50%20PM.png">
+                                                                                                                                                 
+                                                                                                                                               </a>
     <ul>
       <li><a href="product.html">Product Information</a></li>
       <li><a href="support.html">Support Us</a></li>
