--- a/product.html
+++ b/product.html
@@ -62,17 +62,17 @@
   
   <article>
     <h2>What is Awareness?</h2>
-    <p>Marfa church-key kitsch bicycle rights, 8-bit mixtape cardigan gentrify Echo Park. Street art swag brunch, next level roof party Schlitz hella organic keffiyeh selfies. You probably haven't heard of them polaroid hashtag +1, meggings biodiesel Portland High Life cray tumblr retro.</p>
+    <p>The first step in your journey will be downloading the up, then you must enter your username and tell it to your friends/family(the people who should if anything happened to you), and than you’re completely free! The app will do the rest of the job for you!. If you were lost, your family and friends can detect you as long as they have the app and know your username. In addition if your heart rate is low we will contact emergency sources. </p>
   </article>
   
   <article>
     <h2>How does it work?</h2>
-    <p>chambray you probably haven't heard of them pour-over viral selvage umami skateboard VHS post-ironic selfies. Wes Anderson gentrify fanny pack twee, bicycle rights bitters blog keffiyeh plaid flannel. Tonx irony cliche sustainable mlkshk bitters. Four loko leggings chambray Vice.</p>
+    <p>Awareness already made and still is a huge impact on the world, during it few years we were tones of downloads occurred and the number is still growing. So what is impact ? imagine you’re alone and boom! Your heart rate is dropping but you don’t even notice! As long as your phone is on you it will send a message to your local number and they will immediately know and send help. Also, if you were lost your family can track your location using this app. </p>
   </article>
   
   <article>
     <h2>Impacts of Awareness</h2>
-    <p>ethical thundercats sustainable locavore quinoa Neutra. Aesthetic tacky sweater single-origin coffee, bicycle rights organic lo-fi street art american apparel ennui four loko ethnic Brooklyn small batch. Forage YOLO polaroid</p>
+    <p></p>
   </article>
  
 </body>
