--- a/about.html
+++ b/about.html
@@ -69,9 +69,7 @@
   </article>
   <article>
     <h2>Biography</h2>
-    <p>Max shtinker- fresh from McMaster university with a degree in computer science and knowledge of Java and python Max came to us. He is 24 and one of our programmers that worked on the app, mostly on the back end.
-                              Wang Dank: The brain behind this idea. He spent hours and hours on developing this app, along sides with our other amazing members.
-                              </p>
+    <p>Max shtinker- fresh from McMaster university with a degree in computer science and knowledge of Java and python Max came to us. He is 24 and one of our programmers that worked on the app, mostly on the back end. Wang Dank: The brain behind this idea. He spent hours and hours on developing this app, along sides with our other amazing members.</p>
   </article>
  
 </body>
