--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   </article>
   <article>
     <h2>Purpose</h2>
-    <p>chambray you probably haven't heard of them pour-over viral selvage umami skateboard VHS post-ironic selfies. Wes Anderson gentrify fanny pack twee, bicycle rights bitters blog keffiyeh plaid flannel. Tonx irony cliche sustainable mlkshk bitters. Four loko leggings chambray Vice.</p>
+    <p>With our new revolutionary VisionTechTM software, we can monitor users’ surroundings and give them a bird’s eye view of surreptitious events occurring nearby. Our patented algorithm utilizes news websites, street cameras, and user input to keep track and inform the user of events happening nearby, and notifies the user once potentially dangerous events occur. If in the unfortunate event where the user becomes involved or injured with the event nearby, we have developed our new LifeSaverTM wristband to notify friends and relatives of your status. If you are able to, then the app would allow confirmation to friends and relatives that you are safe, but if unable to move or trapped, our new LifeSaverTM wristband will be able to accept voice commands to notify friends and relatives. There is also an emergency button which allows you to contact emergency services discreetly, in case of an event such as a terrorist kidnapping.</p>
   </article>
   <article>
     <h2>Result</h2>
